--- a/src/global.scss
+++ b/src/global.scss
@@ -1,14 +1,3 @@
-/*
- * App Global CSS
- * ----------------------------------------------------------------------------
- * Put style rules here that you want to apply globally. These styles are for
- * the entire app and not just one component. Additionally, this file can be
- * used as an entry point to import other CSS/Sass files to be included in the
- * output CSS.
- * For more information on global stylesheets, visit the documentation:
- * https://ionicframework.com/docs/layout/global-stylesheets
- */
-
 /* Core CSS required for Ionic components to work properly */
 @import "@ionic/angular/css/core.css";
 
@@ -35,3 +24,95 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import '@ionic/angular/css/palettes/dark.system.css';
+
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+
+:root {
+    --blue: #4a5c6a;
+    --blue-light: #9ba8ab;
+    --blue-dark: #253745;
+    --green: #00b809;
+    --green-light: #00dd0b;
+    --green-dark: #007206;
+    --primary-color-light: #ff7c36;
+    --primary-color-dark: #883000;
+    --primary-color: #3584E4;
+    --color-text: #000;
+    --bg-color: #fff;
+    --pg-color: #EBEBEB;
+    --border-color: #00000033;
+}
+
+.dark {
+    --bg-color: #1a1f24;
+    --pg-color: #33353a;
+    --color-text: #fff;
+    --border-color: #ffffff33;
+}
+
+.fulldark {
+    --bg-color: #000000;
+    --pg-color: #212121;
+    --color-text: #fff;
+    --border-color: #ffffff33;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    -webkit-tap-highlight-color: transparent;
+    font-family: "Ubuntu", sans-serif;
+    background-color: var(--bg-color);
+    color: var(--color-text);
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    user-select: none;
+    font-size: 18px;
+}
+
+.btns {
+    background-color: var(--orange);
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color .3s;
+    font-size: 16px;
+}
+
+.btns:hover {
+    background-color: var(--orange-light);
+}
+
+.btns:active {
+    background-color: var(--orange-dark);
+}
+
+.inp {
+    border-radius: 50px;
+    padding: 5px 8px;
+    font-size: 18px;
+    border: 1px solid var(--border-color);
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.select {
+    background-color: transparent;
+    font-size: 18px;
+    border: 1px solid var(--border-color);
+    border-radius: 100px;
+    padding: 10px 20px;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
