--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,47 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+// :root {
+//     --ion-color-primary: #3584e4;
+// }
+
+// :root {
+//     --ion-item-border-color: var(--ion-background-color-step-200);
+//   }
+  
+//   /* This sets a different background and item background for the default theme on ios */
+//   :root.ios {
+//     --ion-background-color: var(--ion-background-color-step-50, #f2f2f6);
+//     --ion-toolbar-background: var(--ion-background-color);
+//     --ion-item-background: #fff;
+//   }
+  
+//   /* This sets a different background and item background for the default theme on md */
+//   :root.md {
+//     --ion-background-color: var(--ion-background-color-step-100, #f9f9f9);
+//     --ion-toolbar-background: var(--ion-background-color);
+//     --ion-item-background: #fff;
+//   }
+  
+//   /* This sets a different item background when dark mode is enabled on ios and md */
+.dark.ios,
+.dark.md {
+    --ion-item-background: #1A1F24;
+    --ion-toolbar-background: #121212;
+    --ion-background: #1A1F24;
+
+    ion-tab-bar {
+        --background: #121212;
+        border: none;
+    }
+}
+
+.dark.ios,
+.light.md {
+    --ion-item-background: #ffffff;
+    --ion-toolbar-background: #ffffff;
+
+        ion-tab-bar {
+        --background: #121212;
+        border: none;
+    }
+}
