--- a/src/app/components/pwa-dialog/pwa-dialog.component.html
+++ b/src/app/components/pwa-dialog/pwa-dialog.component.html
@@ -2,8 +2,8 @@
 <mat-dialog-content>
     <img width="200px" src="assets/chrome.svg" alt="chrome">
     <h3>Para instalar o App Onrange é necessário que você utilize o navegador Google Chrome!</h3>
+    <div class="container-btn">
+        <button mat-button mat-dialog-close (click)="openChrome()">Abrir Chrome</button>
+        <button mat-button mat-dialog-close>Fechar</button>
+    </div>
 </mat-dialog-content>
-<mat-dialog-actions>
-    <!-- <button mat-button mat-dialog-close>Fechar</button> -->
-    <button mat-button mat-dialog-close (click)="openChrome()">Abrir Chrome</button>
-</mat-dialog-actions>
