--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="cardapio" href="/tabs/cardapio">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon name="fast-food-outline"></ion-icon>
       <ion-label>Cardápio</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
-      <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
+    <ion-tab-button tab="tarefas" href="/tarefas">
+      <ion-icon name="checkmark-done-outline"></ion-icon>
       <ion-label>Tarefas</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
+    <ion-tab-button tab="notas" href="/notas">
+      <ion-icon name="document-text-outline"></ion-icon>
       <ion-label>Notas</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
